[FIX] *: BS4, unchecked checkboxes were invisible in some table rows
* web_enterprise

--- a/web_enterprise/static/src/scss/bootstrap_overridden.scss
+++ b/web_enterprise/static/src/scss/bootstrap_overridden.scss
@@ -81,7 +81,6 @@ $headings-color: $gray-900;
 //
 // Customizes the `.table` component with basic values, each used across all table variations.
 
-$table-accent-bg: $gray-200;
 $table-hover-bg: rgba($gray-300, 0.5);
 
 // Buttons
